--- a/aes.ipynb
+++ b/aes.ipynb
@@ -34,8 +34,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.783957Z",
-     "start_time": "2025-11-09T02:50:07.777022Z"
+     "end_time": "2025-11-09T19:08:33.778981Z",
+     "start_time": "2025-11-09T19:08:33.768860Z"
     }
    },
    "source": [
@@ -57,7 +57,7 @@
     "    ]\n"
    ],
    "outputs": [],
-   "execution_count": 583
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -68,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.792901Z",
-     "start_time": "2025-11-09T02:50:07.788657Z"
+     "end_time": "2025-11-09T19:08:33.804284Z",
+     "start_time": "2025-11-09T19:08:33.800634Z"
     }
    },
    "cell_type": "code",
@@ -79,7 +79,7 @@
    ],
    "id": "7698a10ec251b844",
    "outputs": [],
-   "execution_count": 584
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.803657Z",
-     "start_time": "2025-11-09T02:50:07.796426Z"
+     "end_time": "2025-11-09T19:08:33.826638Z",
+     "start_time": "2025-11-09T19:08:33.817041Z"
     }
    },
    "cell_type": "code",
@@ -118,13 +118,13 @@
    ],
    "id": "fd4ef488af4d4674",
    "outputs": [],
-   "execution_count": 585
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.811662Z",
-     "start_time": "2025-11-09T02:50:07.807674Z"
+     "end_time": "2025-11-09T19:08:33.843090Z",
+     "start_time": "2025-11-09T19:08:33.837732Z"
     }
    },
    "cell_type": "code",
@@ -142,13 +142,13 @@
    ],
    "id": "1bd4466e28b42077",
    "outputs": [],
-   "execution_count": 586
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.820196Z",
-     "start_time": "2025-11-09T02:50:07.815800Z"
+     "end_time": "2025-11-09T19:08:33.860048Z",
+     "start_time": "2025-11-09T19:08:33.855453Z"
     }
    },
    "cell_type": "code",
@@ -170,13 +170,13 @@
    ],
    "id": "12d0a52ce8cccdd2",
    "outputs": [],
-   "execution_count": 587
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.827977Z",
-     "start_time": "2025-11-09T02:50:07.823739Z"
+     "end_time": "2025-11-09T19:08:33.877193Z",
+     "start_time": "2025-11-09T19:08:33.871503Z"
     }
    },
    "cell_type": "code",
@@ -190,13 +190,13 @@
    ],
    "id": "2812ff829503675d",
    "outputs": [],
-   "execution_count": 588
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.835582Z",
-     "start_time": "2025-11-09T02:50:07.831991Z"
+     "end_time": "2025-11-09T19:08:33.891858Z",
+     "start_time": "2025-11-09T19:08:33.886917Z"
     }
    },
    "cell_type": "code",
@@ -209,13 +209,13 @@
    ],
    "id": "d664b30a21a6368e",
    "outputs": [],
-   "execution_count": 589
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.843599Z",
-     "start_time": "2025-11-09T02:50:07.838587Z"
+     "end_time": "2025-11-09T19:08:33.908272Z",
+     "start_time": "2025-11-09T19:08:33.902528Z"
     }
    },
    "cell_type": "code",
@@ -241,13 +241,13 @@
    ],
    "id": "6cdff584583a6280",
    "outputs": [],
-   "execution_count": 590
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.854082Z",
-     "start_time": "2025-11-09T02:50:07.848120Z"
+     "end_time": "2025-11-09T19:08:33.931115Z",
+     "start_time": "2025-11-09T19:08:33.923714Z"
     }
    },
    "cell_type": "code",
@@ -288,13 +288,13 @@
      ]
     }
    ],
-   "execution_count": 591
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.865683Z",
-     "start_time": "2025-11-09T02:50:07.860097Z"
+     "end_time": "2025-11-09T19:08:33.990457Z",
+     "start_time": "2025-11-09T19:08:33.980914Z"
     }
    },
    "cell_type": "code",
@@ -376,7 +376,7 @@
      ]
     }
    ],
-   "execution_count": 592
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -387,8 +387,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.875395Z",
-     "start_time": "2025-11-09T02:50:07.870211Z"
+     "end_time": "2025-11-09T19:08:34.049098Z",
+     "start_time": "2025-11-09T19:08:34.043634Z"
     }
    },
    "cell_type": "code",
@@ -404,13 +404,13 @@
    ],
    "id": "bf4103f95c5a6fe",
    "outputs": [],
-   "execution_count": 593
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.884713Z",
-     "start_time": "2025-11-09T02:50:07.880193Z"
+     "end_time": "2025-11-09T19:08:34.096437Z",
+     "start_time": "2025-11-09T19:08:34.089899Z"
     }
    },
    "cell_type": "code",
@@ -423,13 +423,13 @@
    ],
    "id": "5b0973d9f56be2ec",
    "outputs": [],
-   "execution_count": 594
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.893774Z",
-     "start_time": "2025-11-09T02:50:07.889231Z"
+     "end_time": "2025-11-09T19:08:34.114458Z",
+     "start_time": "2025-11-09T19:08:34.108640Z"
     }
    },
    "cell_type": "code",
@@ -444,13 +444,13 @@
    ],
    "id": "481863cc823156b8",
    "outputs": [],
-   "execution_count": 595
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.909037Z",
-     "start_time": "2025-11-09T02:50:07.898287Z"
+     "end_time": "2025-11-09T19:08:34.150359Z",
+     "start_time": "2025-11-09T19:08:34.129165Z"
     }
    },
    "cell_type": "code",
@@ -505,13 +505,13 @@
    ],
    "id": "d64974c515d521c7",
    "outputs": [],
-   "execution_count": 596
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.917649Z",
-     "start_time": "2025-11-09T02:50:07.913626Z"
+     "end_time": "2025-11-09T19:08:34.183437Z",
+     "start_time": "2025-11-09T19:08:34.177664Z"
     }
    },
    "cell_type": "code",
@@ -533,13 +533,13 @@
    ],
    "id": "34c1f39e95fe9149",
    "outputs": [],
-   "execution_count": 597
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.926196Z",
-     "start_time": "2025-11-09T02:50:07.922175Z"
+     "end_time": "2025-11-09T19:08:34.205217Z",
+     "start_time": "2025-11-09T19:08:34.198609Z"
     }
    },
    "cell_type": "code",
@@ -552,13 +552,13 @@
    ],
    "id": "37892165494a3a16",
    "outputs": [],
-   "execution_count": 598
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.933269Z",
-     "start_time": "2025-11-09T02:50:07.929473Z"
+     "end_time": "2025-11-09T19:08:34.257363Z",
+     "start_time": "2025-11-09T19:08:34.251270Z"
     }
    },
    "cell_type": "code",
@@ -568,13 +568,13 @@
    ],
    "id": "6ebecae304536675",
    "outputs": [],
-   "execution_count": 599
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.941348Z",
-     "start_time": "2025-11-09T02:50:07.937291Z"
+     "end_time": "2025-11-09T19:08:34.294889Z",
+     "start_time": "2025-11-09T19:08:34.284570Z"
     }
    },
    "cell_type": "code",
@@ -592,13 +592,13 @@
    ],
    "id": "272cb448baf2267",
    "outputs": [],
-   "execution_count": 600
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.950160Z",
-     "start_time": "2025-11-09T02:50:07.945390Z"
+     "end_time": "2025-11-09T19:08:34.327539Z",
+     "start_time": "2025-11-09T19:08:34.319325Z"
     }
    },
    "cell_type": "code",
@@ -616,20 +616,21 @@
     "    c = shift_rows(b)\n",
     "    e = add_round_key(c, round_keys[10])\n",
     "    resultado = []\n",
-    "    for linha in e:\n",
-    "        for elemento in linha:\n",
-    "            resultado.append(elemento)\n",
+    "    for coluna in range(4):\n",
+    "        for linha in range(4):\n",
+    "            resultado.append(e[linha][coluna])\n",
+    "\n",
     "    return resultado"
    ],
    "id": "bc1103d69721046c",
    "outputs": [],
-   "execution_count": 601
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.958517Z",
-     "start_time": "2025-11-09T02:50:07.954238Z"
+     "end_time": "2025-11-09T19:08:34.349413Z",
+     "start_time": "2025-11-09T19:08:34.343740Z"
     }
    },
    "cell_type": "code",
@@ -644,13 +645,13 @@
    ],
    "id": "8f52c0c9495fd86",
    "outputs": [],
-   "execution_count": 602
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.968908Z",
-     "start_time": "2025-11-09T02:50:07.962025Z"
+     "end_time": "2025-11-09T19:08:34.371611Z",
+     "start_time": "2025-11-09T19:08:34.362219Z"
     }
    },
    "cell_type": "code",
@@ -677,13 +678,13 @@
    ],
    "id": "687e6f25680338fd",
    "outputs": [],
-   "execution_count": 603
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.977092Z",
-     "start_time": "2025-11-09T02:50:07.971916Z"
+     "end_time": "2025-11-09T19:08:34.385915Z",
+     "start_time": "2025-11-09T19:08:34.381290Z"
     }
    },
    "cell_type": "code",
@@ -702,13 +703,13 @@
    ],
    "id": "9a3f770f6d7c3c0",
    "outputs": [],
-   "execution_count": 604
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.987159Z",
-     "start_time": "2025-11-09T02:50:07.983158Z"
+     "end_time": "2025-11-09T19:08:34.402480Z",
+     "start_time": "2025-11-09T19:08:34.396978Z"
     }
    },
    "cell_type": "code",
@@ -723,13 +724,13 @@
    ],
    "id": "4173d8b108642a92",
    "outputs": [],
-   "execution_count": 605
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:07.994726Z",
-     "start_time": "2025-11-09T02:50:07.990679Z"
+     "end_time": "2025-11-09T19:08:34.421820Z",
+     "start_time": "2025-11-09T19:08:34.414808Z"
     }
    },
    "cell_type": "code",
@@ -747,13 +748,13 @@
    ],
    "id": "cce9e818a96e701d",
    "outputs": [],
-   "execution_count": 606
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:08.003408Z",
-     "start_time": "2025-11-09T02:50:07.998797Z"
+     "end_time": "2025-11-09T19:08:34.445368Z",
+     "start_time": "2025-11-09T19:08:34.439743Z"
     }
    },
    "cell_type": "code",
@@ -771,20 +772,21 @@
     "        c = inv_sub_bytes(b)\n",
     "    a = add_round_key(c, chave)\n",
     "    resultado = []\n",
-    "    for linha in a:\n",
-    "        for elemento in linha:\n",
-    "            resultado.append(elemento)\n",
+    "    for coluna in range(4):\n",
+    "        for linha in range(4):\n",
+    "            resultado.append(a[linha][coluna])\n",
+    "\n",
     "    return resultado"
    ],
    "id": "6cc63d90cad8a017",
    "outputs": [],
-   "execution_count": 607
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:08.017827Z",
-     "start_time": "2025-11-09T02:50:08.008423Z"
+     "end_time": "2025-11-09T19:08:34.475523Z",
+     "start_time": "2025-11-09T19:08:34.460336Z"
     }
    },
    "cell_type": "code",
@@ -806,33 +808,33 @@
      "output_type": "stream",
      "text": [
       "[68, 69, 83, 69, 78, 86, 79, 76, 86, 73, 77, 69, 78, 84, 79, 33]\n",
-      "0x9 0x8f 0x18 0x58 0xb5 0x1f 0x69 0x10 0x53 0x8b 0xe 0x45 0xde 0xb3 0xc7 0x9b \n",
-      ";\n",
-      "y\n",
-      ":\n",
-      "Å\n",
-      "\u001C\n",
-      "i\n",
-      "\\\n",
+      "0x9 0xb5 0x53 0xde 0x8f 0x1f 0x8b 0xb3 0x18 0x69 0xe 0xc7 0x58 0x10 0x45 0x9b \n",
+      "D\n",
+      "E\n",
       "S\n",
-      "8\n",
-      "\r\n",
-      "ß\n",
-      "Ã\n",
-      "5\n",
-      "Â\n",
-      "\n",
+      "E\n",
+      "N\n",
+      "V\n",
+      "O\n",
+      "L\n",
+      "V\n",
+      "I\n",
+      "M\n",
+      "E\n",
+      "N\n",
+      "T\n",
+      "O\n",
       "!\n"
      ]
     }
    ],
-   "execution_count": 608
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-09T02:50:08.028509Z",
-     "start_time": "2025-11-09T02:50:08.021836Z"
+     "end_time": "2025-11-09T19:08:34.516749Z",
+     "start_time": "2025-11-09T19:08:34.508130Z"
     }
    },
    "cell_type": "code",
@@ -887,7 +889,7 @@
      ]
     }
    ],
-   "execution_count": 609
+   "execution_count": 27
   }
  ],
  "metadata": {
